maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:6: error: type mismatch;
 found   : Unit
 required: Int
      case 0 => etat = courrirNord()
                                  ^IslandMaze:22: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    } else { return 1 }
                    ^IslandMaze:22: warning: enclosing method courrirNord has result type Unit: return value discarded
    } else { return 1 }
             ^IslandMaze:24: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return 0
         ^IslandMaze:24: warning: enclosing method courrirNord has result type Unit: return value discarded
  return 0
  ^