maze.island.IslandMaze.scala.code
override def run() {
  var etat: Int = 0
  while (!estSurBiscuit()) {
    etat match {
      case 0 => etat = courrirNord()
      case 1 => suivreGauche()
      case _ => println("error")
    }
  }
  prendBiscuit()
}

def courrirNord() {
  setDirection(Direction.NORTH)
  if (!estFaceMur()) { 
    avance() 
  } else {
    gauche()
    if (!estFaceMur()) { 
      avance () 
    } else { return 1 }
  }
  return 0
}

def suivreGauche() {
  keepHandOnSideWall()
}

def keepHandOnSideWall() {
  gauche()
  if (!estFaceMur()) {
    avance()
  } else  {
    while (estFaceMur()) {
      droite()
    }
    avance()
  }
}